--- a/public/css/card.css
+++ b/public/css/card.css
@@ -25,6 +25,7 @@
     margin-top: auto !important;
     color: rgb(0, 0, 0) !important;
     font-weight: bolder;
+    font-size: large;
    }
    
    /*Text*/
