--- a/views/user/checkOut.ejs
+++ b/views/user/checkOut.ejs
@@ -141,7 +141,7 @@
     <div class="container mt-2 mb-3" style="display: flex; justify-content: center;">
         <div class="row">
             <div class="col-12 col-md-6">
-                <form class="row g-3 needs-validation" action="" method="get" novalidate enctype="application/form-data" style="width: 20vw; min-width: 300px; border: 1px solid rgb(174, 174, 174); border-radius: 7px; padding: 10px 5px; box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.705);">
+                <form class="row g-3 needs-validation" action="" method="get" novalidate enctype="application/form-data" style="width: 20vw; min-width: 300px; border: 1px solid rgb(174, 174, 174); border-radius: 7px; padding: 10px 5px; box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.705);">
                     <div class="col-md-12">
                         <i class="fa-solid fa-ticket me-2 ms-2" style="font-size: 30px;"></i><label for="validationCustom01" class="form-label" style="font-family: 'Michroma', sans-serif;">Select Coupon</label>
                         <input type="text" class="rounded-pill form-control codeInput" id="validationCustom01 codeInput" name="code" required style="box-shadow: 0px 0px 3px rgb(0, 0, 0);">
@@ -153,7 +153,7 @@
                     <div class="save">
                         <div class="d-flex" style="justify-content: center; gap: 10px;">
                             <button class="btn btn-dark rounded-pill px-3 " id="applyCouponButton" type="submit">Apply</button>
-                            <a class="btn btn-dark rounded-pill px-3 " id="clearCouponButton"><i class="fa-solid fa-xmark fs-5 mt-1"></i></a>
+                            <a class="btn btn-dark rounded-circle " id="clearCouponButton"><i class="fa-solid fa-xmark fs-5 mt-1"></i></a>
                         </div>
                     </div>
                     <script>
@@ -293,7 +293,6 @@
                                     }
                                 });
 
-                                // Remove the 'was-validated' class from here
                             });
                         })();
                         function handleWalletCheckbox() {
