--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -12,7 +12,7 @@
     <div class="container productCont" style="margin-top: 0px; background-color: white; border: none;">
                 <% if (locals?.products) { %>
                     <% products?.forEach(product => { %>
-                        <div class="container" style="margin-top: 20px; margin-bottom: 10px; border: 1px solid black; border-radius: 20px;">
+                        <div class="container" style="margin-top: 20px; margin-bottom: 10px; border: 1px solid rgb(166, 165, 165); border-radius: 20px;">
                             <div class="row" style=" border-radius: 20px; row-gap: 10px;">
                                 <div class="col-12 col-lg-4 p-2 d-flex align-items-center" >
                                     <div class="row">
